fully converted to SQLAlchemy, working app

--- a/kiosk/templates/menu.html.jinja
+++ b/kiosk/templates/menu.html.jinja
@@ -5,11 +5,11 @@
 {% block content %}
     {% if menu %}
         {% for item in menu %}
-            <div class="order-item" id="{{ item.id }}" food="{{ item.foodID }}">
-                <img class="order-item-image" src="{{ item.image }}" alt="">
-                <span class="order-item-name">{{ item.name }}</span>
+            <div class="order-item" id="{{ item[0] }}" food="{{ item[1] }}">
+                <img class="order-item-image" src="{{ item[4] }}" alt="">
+                <span class="order-item-name">{{ item[1] }}</span>
                 <br>
-                <span class="order-item-price">${{ item.price }}</span>
+                <span class="order-item-price">${{ item[2] }}</span>
             </div>
             <div class="order-sep"></div>
         {% endfor %}
