--- a/kiosk/templates/template.html.jinja
+++ b/kiosk/templates/template.html.jinja
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/res/app.js"></script>
     <link rel="stylesheet" href="/res/style.css">
+    <link rel="shortcut icon" href="/res/favicon.ico">
     <title>{% block title %}{% if title %}{{ title }}{% else %}Mex &amp; Co.{% endif %}{% endblock %}</title>
 </head>
 <body>
