--- a/kiosk/templates/template.html.jinja
+++ b/kiosk/templates/template.html.jinja
@@ -17,6 +17,7 @@
         {% if current_user.is_anonymous %}
         <a href="{{ url_for('login') }}">Login</a>
         {% else %}
+        <a href="{{ url_for('userpage') }}">User Page</a>
         <a href="{{ url_for('logout') }}">Logout</a>
         {% endif %}
         <a class="right-nav" id="themeToggleButton">Light Theme</a>
