--- a/kiosk/templates/register.html.jinja
+++ b/kiosk/templates/register.html.jinja
@@ -15,7 +15,7 @@
         </p>
         <p>
             {{ form.email.label }}<br>
-            {{ form.email(size=120) }}
+            {{ form.email(size=32) }}
             {% for error in form.email.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
@@ -24,6 +24,13 @@
             {{ form.password.label }}<br>
             {{ form.password(size=32) }}
             {% for error in form.password.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.confirm_password.label }}<br>
+            {{ form.confirm_password(size=32) }}
+            {% for error in form.confirm_password.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
