--- a/kiosk/templates/index.html.jinja
+++ b/kiosk/templates/index.html.jinja
@@ -1,5 +1,5 @@
 {% extends 'template.html.jinja' %}
 
 {% block content %}
-    <h1>Hi, {{ user }}!</h1>
+    <h1>Hi, {{ user }}! Welcome to Mex&Co!</h1>
 {% endblock %}
