user login rego and profile working

--- a/kiosk/templates/_order.html.jinja
+++ b/kiosk/templates/_order.html.jinja
@@ -1,6 +1,6 @@
     <table>
         <tr valign="top">
-            <td><img src="{{ order.customer.order()) }}"></td>
-            <td>{{ order.customer.username }} ordered:<br>{{ order.order }}</td>
+            <td>{{ order.customer.username }}</td>
+            <td> ordered: <br>{{ order.order }}</td>
         </tr>
     </table>
