--- a/kiosk/templates/404.html.jinja
+++ b/kiosk/templates/404.html.jinja
@@ -39,4 +39,5 @@
         <br>
         <em><strong>Tell no one, or you will be thrown into the dungeon.</strong></em>
     </p>
+    <p><a href="{{ url_for('index') }}">Go Back!</a></p>
 {% endblock %}
