NOT working menu_item route

--- a/kiosk/templates/menu_item.html.jinja
+++ b/kiosk/templates/menu_item.html.jinja
@@ -1,10 +1,6 @@
 {% extends "template.html.jinja" %}
 
-{% if title %}
-    {% block title %}{{ title }}{% endblock %}
-{% else %}
-    {% block title %}Menu Details{% endblock %}
-{% endif %}
+{% block title %} Order Menu Item {% endblock %}
 
 {% block content %}
     {% if item %}
