working menu_item page and functions and flash

--- a/kiosk/templates/menu_item.html.jinja
+++ b/kiosk/templates/menu_item.html.jinja
@@ -3,28 +3,29 @@
 {% block title %} Order Menu Item {% endblock %}
 
 {% block content %}
-    {% if item %}
-        <div class="order-item" id="{{ item.id }}" food="{{ item.item }}">
-            <img class="order-item-image" src="{{ item.img }}" alt="">
-            <span class="order-item-name">{{ item.item }}</span>
+    {% if food %}
+        <div class="order-item" id="{{ food.id }}" food="{{ food.item }}">
+            <img class="order-item-image" src="{{ food.img }}" alt="">
+            <span class="order-item-name">{{ food.item }}</span>
             <br>
-            <span class="order-item-price">${{ item.price }}</span>
+            <span class="order-item-price">${{ food.price|round(2) }}</span>
             <form action="" method="post" novalidate>
             {{ form.hidden_tag() }}
             <p>
-                {{ form.number.label }} {{ form.number(size=2) }}
-                {% for error in form.password.errors %}
+                {{ form.number.label }} {{ form.number(size=1) }}
+                {% for error in form.number.errors %}
                 <span style="color: red;">[{{ error }}]</span>
                 {% endfor %}
-                {{ form.foodid(size=3) }}
-                {% for error in form.password.errors %}
+                {{ form.foodname(size=3) }}
+                {% for error in form.foodname.errors %}
                 <span style="color: red;">[{{ error }}]</span>
                 {% endfor %}
                 {{ form.submit() }}
             </p>
             <p>
-                <span class="order-item-price">${{ item.description }}</span>
+                <span class="order-item-desc">{{ food.description }}</span>
             </p>
+
         </div>
         <div class="order-sep"></div>
     {% else %}
